Fixing an alignment issue

--- a/index.css
+++ b/index.css
@@ -505,7 +505,7 @@ body {
     padding-bottom: 4rem;
 }
 
-.grid-container * {
+.grid-container p:not[class] {
     max-width: 50ch;
 }
 
@@ -539,7 +539,6 @@ body {
 
 .destination-meta {
     flex-direction: column;
-    align-items: center;
     border-top: 1px solid hsl( var(--clr-white) / .2 );
     padding-top: 2.5rem;
     margin-top: 2.5rem;
@@ -597,7 +596,7 @@ body {
     }
 
     .destination-meta {
-        --gap: 6rem;
+        --gap: min(6vw, 6rem);
         justify-content: start;
     }
 }
